# VulkanApp

./: CMakeLists.txt  README.md
cmake-project/: .gitignore  CMakeLists.txt  README.md
cmake-project/src/: main.cpp
cmake-project/src/shaders/: tri.vert
include/: README
src/: Vertex.cpp  Vertex.h  main.cpp
src/shaders/: compile.sh  graphicsShader.vert  graphicsShader.vert.spv  tri.frag
